@@ -24,7 +24,7 @@ pod_coverage:
     - Test2::Tools::HTTP::Apps#new
     - Test2::Tools::HTTP::UA::LWP
     - Test2::Tools::HTTP::UA::LWPClass
-    - Test2::Tools::HTTP#app
+    - Test2::Tools::HTTP#app_add
     - Test2::Tools::HTTP#charset
     - Test2::Tools::HTTP#code
     - Test2::Tools::HTTP#content
